--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,11 +7,15 @@
   "browser_action": {
       "default_popup": "index.html",
       "default_title": "Donwload",
-      "default_icon": "icon.png",
+      "default_icon": "icon.png"
   },
   "icons": {
       "256": "icon.png"
   },
-  "content_security_policy": "script-src 'self' 'sha256-YWrZAZMzkC/1bIirNxCX5kYbc+EouyDot6B2r8CAxBQ='; object-src 'self'",
-  "permissions": ["storage"]
+  "content_security_policy": "script-src 'self' 'sha256-YWrZAZMzkC/1bIirNxCX5kYbc+EouyDot6B2r8CAxBQ=' https://kit.fontawesome.com/8a98030ce8.js; object-src 'self'",
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "storage"
+  ]
 }
