--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,7 @@
   "name": "Media Donwload Extensions",
   "version": "0.0.1",
   "author": "Denis Zolotarenko",
-  "manifest_version": 1,
-  "default_locale": "en",
+  "manifest_version": 2,
   "browser_action": {
       "default_popup": "index.html",
       "default_title": "Donwload",
@@ -12,10 +11,15 @@
   "icons": {
       "256": "icon.png"
   },
+  "background": {
+    "persistent": false,
+    "scripts":["static/js/2.*.chunk.js"]
+  },
   "content_security_policy": "script-src 'self' 'sha256-YWrZAZMzkC/1bIirNxCX5kYbc+EouyDot6B2r8CAxBQ=' https://kit.fontawesome.com/8a98030ce8.js; object-src 'self'",
   "permissions": [
     "tabs",
     "activeTab",
+    "<all_urls>",
     "storage"
   ]
 }
