--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "babel-loader": "^8.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react":"^7.0.0",
+    "webpack": "^4.20.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
