--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.1",
-    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "babel-loader": "^8.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react":"^7.0.0",
-    "webpack": "^4.20.0",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "start:w": "webpack --mode development --watch",
+    "build:w": "./node_modules/.bin/webpack -p --mode development"
   },
   "eslintConfig": {
     "extends": "react-app"
