--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "react-scripts build"
+    "build": "react-scripts build.v1"
   },
   "eslintConfig": {
     "extends": "react-app"
