--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.9.0"
@@ -30,7 +31,7 @@
     "eject": "react-scripts eject",
     "build": "react-scripts build",
     "start:w": "webpack --mode development --watch",
-    "build:w": "./node_modules/.bin/webpack -p --mode development"
+    "build:w": "./node_modules/.bin/webpack -p --mode=production"
   },
   "eslintConfig": {
     "extends": "react-app"
