--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.1",
     "@types/sqlite3": "^3.1.6",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -21,6 +22,7 @@
   "dependencies": {
     "instagram-private-api": "^1.42.0",
     "install": "^0.13.0",
+    "lodash": "^4.17.20",
     "npm": "^6.14.8",
     "sqlite3": "^5.0.0"
   }
