--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.20",
     "npm": "^6.14.8",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "ts-node": "^9.0.0"
   }
 }
