--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.20",
     "npm": "^6.14.8",
     "sqlite3": "^5.0.0",
+    "telegraf": "^3.38.0",
     "ts-node": "^9.0.0"
   }
 }
