--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.8",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.1",
     "@types/sqlite3": "^3.1.6",
@@ -20,9 +22,10 @@
     "typescript": "<3.8.0"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "instagram-private-api": "^1.42.0",
     "lodash": "^4.17.20",
-    "npm": "^6.14.8",
     "sqlite3": "^5.0.0",
     "telegraf": "^3.38.0",
     "ts-node": "^9.0.0"
