--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/ioredis": "^4.17.4",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.1",
     "@types/sqlite3": "^3.1.6",
@@ -25,6 +26,7 @@
     "chalk": "^4.1.0",
     "express": "^4.17.1",
     "instagram-private-api": "^1.42.0",
+    "ioredis": "^4.17.3",
     "lodash": "^4.17.20",
     "sqlite3": "^5.0.0",
     "telegraf": "^3.38.0",
