--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bull": "^3.14.3",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/ioredis": "^4.17.4",
@@ -23,6 +24,7 @@
     "typescript": "<3.8.0"
   },
   "dependencies": {
+    "bull": "^3.18.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
     "instagram-private-api": "^1.42.0",
