--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "typescript": "<3.8.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bull": "^3.18.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
