--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "instagram-private-api": "^1.42.0",
     "ioredis": "^4.17.3",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "sqlite3": "^5.0.0",
     "telegraf": "^3.38.0",
     "ts-node": "^9.0.0"
