--- a/extension/package.json
+++ b/extension/package.json
@@ -3,27 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.6",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.8.1",
+    "@material-ui/pickers": "^3.2.10",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "8.1.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.41.2",
+    "webpack": "4.42.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
