--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Media Download Extensions",
+  "name": "Instagram Publisher",
   "version": "1.0.0",
   "author": "Denis Zolotarenko",
   "manifest_version": 2,
@@ -11,21 +11,20 @@
   "icons": {
       "256": "icon.png"
   },
-  "background": {
-    "persistent": false,
-    "scripts": ["background.js"]
-  },
+  "content_security_policy": "script-src 'self' https://kit.fontawesome.com/8a98030ce8.js; object-src 'self'; style-src * data: 'unsafe-inline' 'unsafe-eval';",
+  "permissions": [
+    "<all_urls>",
+    "background",
+    "activeTab"
+  ],
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["content.js"]
+      "matches": ["<all_urls>"],
+      "js": ["create-container.js", "container.js", "drop-container.js"]
     }
   ],
-  "content_security_policy": "script-src 'self' 'sha256-YWrZAZMzkC/1bIirNxCX5kYbc+EouyDot6B2r8CAxBQ=' https://kit.fontawesome.com/8a98030ce8.js; object-src 'self'",
-  "permissions": [
-    "tabs",
-    "activeTab",
-    "<all_urls>",
-    "storage"
+  "web_accessible_resources": [
+    "styles/*",
+    "images/*"
   ]
 }
