--- a/server/bin/build
+++ b/server/bin/build
@@ -1,6 +1,6 @@
 #! /usr/bin/env sh
-set -x
-NODE_ENV=production ./node_modules/.bin/tsc -p tsconfig.production.json
-cp -R ./src/notifications/emails/* ./dist/notifications/emails
-rm ./dist/notifications/emails/*.ts
-rm ./dist/db/migrations/*.map
+export NODE_ENV="production"
+npx tsc -p tsconfig.json
+
+cp ./conf.json ./dist
+mkdir ./dist/db/exp
