--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -13,13 +13,12 @@
   },
   "content_security_policy": "script-src 'self' https://kit.fontawesome.com/8a98030ce8.js; object-src 'self'; style-src * data: 'unsafe-inline' 'unsafe-eval';",
   "permissions": [
-    "<all_urls>",
     "background",
     "activeTab"
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.instagram.com/"],
       "js": ["create-container.js", "container.js", "drop-container.js"]
     }
   ],
