add ngrok; updated bot commands

--- a/server/bin/build
+++ b/server/bin/build
@@ -3,6 +3,7 @@ export NODE_ENV="production"
 npx tsc -p tsconfig.json
 
 cp ./conf.json ./dist
+cp ./ngrok.json ./dist
 
 node ./bin/migrate up main
 cp -a ./src/db/exp ./dist/db
