--- a/extension/package.json
+++ b/extension/package.json
@@ -11,9 +11,13 @@
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.13.0",
     "react-scripts": "^3.4.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/polyfill": "7.0.0",
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
@@ -35,7 +39,8 @@
     "eject": "react-scripts eject",
     "build": "react-scripts build",
     "start:w": "webpack --mode development --watch",
-    "build:w": "./node_modules/.bin/webpack -p --mode=production"
+    "build:w:main": "MAIN=true webpack -p --mode=production",
+    "build:w:popup": "POPUP=true  webpack -p --mode=production"
   },
   "eslintConfig": {
     "extends": "react-app"
