--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     image: redis:5.0.3-alpine
     container_name: media_redis
     ports:
-    - 6379:6379
+    - 6389:6379
     tty: true
+    command: >
+      --requirepass secret
     restart: "always"
